--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "normalize.css": "^8.0.1",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^5.3.0",
     "react-transition-group": "^4.4.5"
   },
   "devDependencies": {
